# pypkgs

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.rst
tests/: test_pypkgs.py
