[tool.poetry]
name = "pypkgs"
version = "0.1.0"
description = "Individual assignment 1 Python package"
authors = ["tan95 <andrew--tan@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
